--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProjectSubmissionActivity"></activity>
-        <activity android:name=".LeaderBoardActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".SubmissionActivity" android:theme="@style/AppTheme.SubmissionActivity"></activity>
+        <activity android:name=".LeaderBoardActivity"/>
+        <activity android:name=".SplashActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
